# RobotModel

./: .gitignore  CMakeLists.txt  Kinematics.cc  README.md  RobotModel.cc
Kinematics/: CMakeLists.txt  Kinematics.cc  Kinematics.h
kinematics/: CMakeLists.txt  kinematics.cc  kinematics.h
math/: CMakeLists.txt  adjoint.cc  adjoint.h  axis_ang3.cc  axis_ang3.h  axis_ang6.cc  axis_ang6.h  distance_to_se3.cc  distance_to_se3.h  distance_to_so3.cc  distance_to_so3.h  f_kin_body.cc  f_kin_body.h  f_kin_space.cc  f_kin_space.h  math.h  matrix_exp3.cc  matrix_exp3.h  matrix_exp6.cc  matrix_exp6.h  matrix_log3.cc  matrix_log3.h  matrix_log6.cc  matrix_log6.h  near_zero.cc  near_zero.h  normalize.cc  normalize.h  project_to_se3.cc  project_to_se3.h  project_to_so3.cc  project_to_so3.h  rot_inv.cc  rot_inv.h  rp_to_trans.cc  rp_to_trans.h  screw_to_axis.cc  screw_to_axis.h  se3_to_vec.cc  se3_to_vec.h  (+14 more)
